# CrowdIQ

./: .env.example  .env.production  README.md  alembic.ini  docker-compose.yml  main.py  migrate_arch.py  pyproject.toml  scratch_test_health.py
migrations/: env.py
migrations/versions/: 4b0871779ffd_initial_migration.py  69bc867c0206_use_timezone_aware_timestamps.py
src/: __init__.py
src/application/dto/: auth.py  comment.py  notification.py  prediction.py  user.py  vote.py  wallet.py
src/application/mapper/: __init__.py  prediction_mapper.py  user_mapper.py
src/application/services/: ai_service.py  auth_service.py  comment_service.py  notification_service.py  prediction_service.py  search_service.py  user_service.py  vote_service.py  wallet_service.py
src/application/validator/: __init__.py  login_validator.py  password_validator.py
src/domain/comment/: __init__.py  entity.py  repository.py
src/domain/exception/: __init__.py  base.py
src/domain/model/: category.py  comment.py  notification.py  prediction.py  reputation.py  user.py  vote.py  wallet.py
src/domain/notification/: __init__.py  entity.py  repository.py
src/domain/prediction/: __init__.py  entity.py  repository.py
src/domain/reputation/: __init__.py  entity.py  repository.py
src/domain/service/: ai_service.py  auth_service.py  comment_service.py  prediction_service.py  search_service.py  user_service.py  vote_service.py  wallet_service.py
src/domain/user/: __init__.py  (+2 more)
src/presentation/: __init__.py
tests/: __init__.py  conftest.py  test_auth.py  test_predictions.py  test_users.py
(+158 files in other folders)
